@@ -1,4 +1,5 @@
 require("scripts.commands")
+require("scripts.remote_interface")
 require("scripts.tracker")
 require("scripts.gui")
 require("scripts.presets_loader")
